fix max priority